--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/scripts.js"></script>
     <title></title>
   </head>
   <body>
+    <h1>Code your text here!</h1>
+    <form id="target" action="destination.html">
+      <input type="text" id="sentence"value="Hello there">
+      <input type="submit" value="Encode">
+    </form>
+    <img src="http://placekitten.com/400/302" id="img1" alt="blue eyed kitten">
+    <img src="http://placekitten.com/400/354" id="img2" alt="another kitten">
+
 
   </body>
 </html>
