text is coded at the bottom of the page

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <body>
     <h1>Code your text here!</h1>
     <form id="target" action="destination.html">
-      <input type="text" id="sentence"value="Hello there">
+      <input type="text" id="sentence"value="Type your text here">
       <input type="submit" value="Encode">
     </form>
-    <img src="http://placekitten.com/400/302" id="img1" alt="blue eyed kitten">
-    <img src="http://placekitten.com/400/354" id="img2" alt="another kitten">
+    <!-- <img src="http://placekitten.com/400/302" id="img1" alt="blue eyed kitten"> -->
+    <img src="http://placekitten.com/1301/454" id="img2" alt="another kitten">
+    <h1 id="coder">Your coded text will appear here</h1>
 
 
   </body>
